# wasm_exec

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/actions/poetry_setup/: action.yml
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_security.py  test_wasm_exec.py
wasm_exec/: __init__.py  exceptions.py  schema.py
