[tool.poetry]
name = "wasm-exec"
version = "0.1.1"
description = "WASM-powered sandboxed version of `exec()` for running dynamic code."
authors = ["Justin Flick"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/jflick58/wasm_exec"
packages = [{include = "wasm_exec"}]
include = ["bin/*", "README.md"]

[tool.poetry.dependencies]
python = "^3.8"
wasmtime = "^9.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.install_wasm]
optional = true

[tool.poetry.group.install_wasm.dependencies]
requests = "^2.31.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
mypy = "^0.991"
black = "^23.1.0"
types-chardet = "^5.0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
