[tool.poetry]
name = "wasm-exec"
version = "0.1.9"
description = "WASM-powered, sandboxed version of `exec()` for running dynamic code."
authors = ["Justin Flick"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/jflick58/wasm_exec"
packages = [
    { include = "wasm_exec" },
]
include = ["wasm_runtime/*"]

[tool.poetry.dependencies]
python = "^3.8"
requests = { version = "^2.31.0", optional = true }
wasmtime = "^9.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.286"
types-chardet = "^5.0.4.6"

[tool.poetry.extras]
install-wasm = ["requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
